Noch ein paar Leerzeichen korrigiert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2937 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana2/skript.tex
+++ b/carl-ana2/skript.tex
@@ -215,7 +215,7 @@
   existiert.
   \begin{enumerate}
   \item Existenz des Limes\\
-    $(f_n)$ ist eine Cauchyfolge, d.h. $\forall \varepsilon>0\,\exists
+    $(f_n)$ ist eine Cauchyfolge, d.\,h. $\forall \varepsilon>0\,\exists
     n_\varepsilon \in \N\,\forall n,m \geq n_\varepsilon \colon 
     ||f_n-f_m||_\infty\leq\varepsilon$\\
     $||f_n-f_m||=\sup_{x\in X} |f_n(x)-f_m(x)|\leq\varepsilon
@@ -387,7 +387,7 @@
   \[\exists m\in\N\,\exists x_1,\dots,x_m\in E\,\forall x\in
   E\,\exists \alpha_1,\dots,\alpha_m\in\K\colon  x=\sum_{i=1}^{m} \alpha_ix_i\]
 \end{definition}
-\[\dim E \coloneqq \inf\{m| \exists x_1,\dots,x_m\in E\, \forall x\in
+\[\dim E \coloneqq \inf\{m| \exists x_1,\dots,x_m\in E\,\forall x\in
 A\,\exists \alpha_1,\dots,\alpha_m\in\K\colon x=\sum_{i=1}^m\alpha_ix_i\}\]
 Beispiel: $\R^n, \C^n$
 
@@ -477,7 +477,7 @@ Beispiel: $\R^n, \C^n$
   $||\alpha||_\infty=||(\alpha_1,\dots,\alpha_n)||_\infty\leq\sum_{i=1}^n
   |\alpha_i|=1$ für $\alpha=(\alpha_1,\dots,\alpha_n)\in S$. Somit ist
   $S$ in $[\R^n,||\cdot||_\infty]$ kompakt nach \autoref{satz:bw}. Weil
-  $f$ stetig ist, folgt, dass $f$ auf $S$ das Minimum annimmt, d.h.\\
+  $f$ stetig ist, folgt, dass $f$ auf $S$ das Minimum annimmt, d.\,h.\\
   $\exists (\alpha_1^0,\dotsc,\alpha_n^0)\in S\,\forall
   (\alpha_1,\dotsc, \alpha_n)\in S\colon 
   0<\frac{1}{c_0}=f((\alpha_1^0,\dots,\alpha_n^0)\leq
@@ -1026,7 +1026,7 @@ Kettenregel: $f'(x)=g'(u(x))u'(x)$
   das $\RR$-Integral von $f$ über $[a,b]$.
 \end{definition}
 
-$f$ ist z.B. integrierbar, wenn $f$ stetig ist. Ferner: $\int_a^b
+$f$ ist z.\,B. integrierbar, wenn $f$ stetig ist. Ferner: $\int_a^b
 f(t)dt=0,\int_a^bf(t)dt=-\int_b^a f(t)dt$.
 Analog definiert man für $A;[a,b]\rightarrow\LL (\R^n,\R^m)$ das $\RR$-Integral
 als:
@@ -1569,7 +1569,7 @@ A^Tb_k$ liegt ein absolutes isoliertes Minimum vor.
 Eine Funktion $f\colon D\rightarrow\R^m,D\subset\R^n$ wird \emph{implizit\index{implizit}}
 genannt, wenn sie durch eine Gleichung der Form
 \[F(x,y)=0\]
-gegeben ist, d.\,h. $F(x,f(x))=0\, \forall x\in D$.
+gegeben ist, d.\,h. $F(x,f(x))=0$ für alle $x\in D$.
 
 Problem: Unter welchen Bedingungen an $F$ wird durch $F(x,y)=0$ eine
 Funktion $y=f(x)$ definiert? Oder unter welchen Bedingungen an $F$ ist
@@ -2413,10 +2413,10 @@ Dann gilt:
   \item $\varphi$ ist eine Lösung von \autoref{def:DiffglHoch} 
 $\Rightarrow\Phi\coloneqq \begin{pmatrix}\varphi\\ \varphi'\\\vdots\\ \varphi^{(k-1)}
 \end{pmatrix}$ ist eine Lösung von 
-\begin{equation}
+\begin{gather}
   \label{def:DiffglEin}
    Y'=F(x,Y)
-\end{equation}
+\end{gather}
 Denn: Sei $\varphi\colon I\rightarrow\R^n$ eine Lösung von \autoref{def:DiffglHoch},
 d.\,h. $\varphi^{(k)}(x)=f(x,\varphi(x),\dots,\varphi^{(k-1)}(x))
 \Rightarrow$
@@ -3376,7 +3376,7 @@ sind linear unabhängig. Aber $\varphi_1(1)=\varphi_2(1)=\begin{pmatrix}
 Bemerkungen:
 \begin{enumerate}[(a)]
   \item Nach \autoref{satz:linAbh} gilt: $\varphi_1,\dots,\varphi_n$
-    linear unabhängig, g.d.w. $\exists x_0\in I\colon \det\Phi(x_0)\neq
+    linear unabhängig, g.\,d.\,w. $\exists x_0\in I\colon \det\Phi(x_0)\neq
     0\Leftrightarrow\forall x \in I\colon \det \Phi(x)\neq 0$
   \item Ist $\Phi=(\varphi_1,\dots,\varphi_n)$ ein Lösungsfundamentalsystem
     von $y'=A(x)y$, so lässt sich die allgemeine Lösung von $y'=A(x)y$ 
@@ -3619,19 +3619,19 @@ Methode der Variation der Konstanten}
 Ansatz: $\psi(x)=\varphi(x)u(x)$, wobei $L(\varphi(x))=0$.\\
 Demonstration der Methode anhand einer linearen Differentialgleichung
 2.\,Ordnung:
-\begin{equation}
+\begin{gather}
   \label{eq:Red}
   y''+a(x)y'+b(x)=0
-\end{equation}
+\end{gather}
 Sei $\varphi\neq 0$ eine Lösung von \autoref{eq:Red}.\\
 Einsetzen in DGL:\\
 $\varphi u''+(2\varphi'+a(x)\varphi)u'+\underbrace{u(\varphi''+a(x)
 \varphi'+b(x)\varphi)}_{=0}=0\Leftrightarrow u''+\left( \frac{2\varphi'}{\varphi}
 +a(x)\right)u'=0$. Setzen $v\coloneqq u'$. Dann ist
-\begin{equation}
+\begin{gather}
   \label{eq:Redv}
 \boxed{v'+\left( \frac{2\varphi'}{\varphi}+a(x)\right)v=0}
-\end{equation}
+\end{gather}
 eine lineare DGL 1.\,Ordnung. Es gilt: Ist $v\neq 0$ Lösung der
 \autoref{eq:Redv}, so ist $\psi(x)=\varphi(x)u(x)$, wobei
 $u(x)=\int_{x_0}^x v(t)dt$, eine von $\varphi$ unabhängige Lösung von
@@ -3937,7 +3937,7 @@ Vektorfeld ein Gradientenfeld ist:
 \end{enumerate}
 
 \subsection{Praktische Bestimmung von $\Phi$}
-Sei o.B.d.A. $f=\text{ grad }\Phi, \Phi=\Phi(x_1,x_2), f_1=
+Sei o.\,B.\,d.\,A. $f=\text{ grad }\Phi, \Phi=\Phi(x_1,x_2), f_1=
 \frac{\partial \Phi}{\partial x}, f_2=\frac{\partial \Phi}{\partial x_2}$. 
 \begin{enumerate}
   \item Man wählt einen Polygonzug $\gamma$ in Richtung der Koordinatenachsen
