--- a/giesen-algogeo/skript.tex
+++ b/giesen-algogeo/skript.tex
@@ -22,7 +22,7 @@
 \documentclass[ngerman,draft,parskip=half*,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{index}
+%\usepackage{index}
 \usepackage[final]{graphicx}  % Für Grafiken
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
