noch ne Kleinigkeit
git-svn-id: https://svn.lug-jena.de/uni-skripte@2953 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/giesen-algogeo/skript.tex
+++ b/giesen-algogeo/skript.tex
@@ -1154,7 +1154,7 @@ Dazu benötigen wir das Prädikat $\operatorname{IS\_LEFT\_OF}(p,q,r)$ das uns sag
 	$p \coloneqq$ Lexikographisch kleinster Punk in $P$\;
 	$p' \coloneqq p$\;
 	\Repeat{$p = p'$}{
-		q \coloneqq beliebiger Punkt in $P\setminus \{p\}$\;
+		$q \coloneqq$ beliebiger Punkt in $P\setminus \{p\}$\;
 		\ForAll{$ r \in P\setminus\{p,q\}$}{
 			\If{$\operatorname{IS\_LEFT\_OF}(p,q,r)$}{
 				$q \coloneqq r$\;
