Liste der wegzuräumenden Grafiken ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2955 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/giesen-algogeo/skript.tex
+++ b/giesen-algogeo/skript.tex
@@ -1,6 +1,6 @@
 % Einige zusätzliche Informationen für rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
-% rubber: clean $base.thm
+% rubber: clean $base.thm grafiken/grafik1.eps grafiken/grafik2.eps skript.idx grafiken/punktnichtinseinerpowerzelle.eps grafiken/13flip.eps grafiken/smallangle.pdf grafiken/punktevent.eps grafiken/orthogonaletangenten.pdf grafiken/kaskadierenderflip.pdf grafiken/gewichteterpunktalsball.pdf grafiken/voronoi.pdf grafiken/homeomorpheobjekte.eps grafiken/kurveundbaelle.pdf grafiken/22flip.eps grafiken/graphenabstandsfunktion-power.pdf grafiken/sigmaundbaelle.pdf grafiken/punktnichtinseinerpowerzelle.pdf grafiken/aufdickung.eps grafiken/13flip.pdf grafiken/punktevent.pdf grafiken/lemma-leeressegment.eps grafiken/sweepline.eps grafiken/kurve.eps grafiken/thales-mpenthalten.eps grafiken/crustlemma1.eps grafiken/delaunayeigenschaft.eps grafiken/halbkanten.eps grafiken/homeomorpheobjekte.pdf grafiken/crust3d-suchbereich.eps grafiken/22flip.pdf grafiken/dg-flip.eps grafiken/samplingvoronoi.eps grafiken/skelet.eps grafiken/graphenabstandsfunktion-quadratisch.eps grafiken/ballbstrich.eps grafiken/aufdickung.pdf grafiken/leerepowerzelle.eps grafiken/sweepline.pdf grafiken/lemma-leeressegment.pdf grafiken/kurve.pdf grafiken/crustlemma1.pdf grafiken/thales-mpenthalten.pdf grafiken/thales.eps grafiken/thales-nichtmpenthalten.eps grafiken/delaunayeigenschaft.pdf grafiken/halbkanten.pdf grafiken/flip.eps grafiken/crust3d-suchbereich.pdf grafiken/dg-flip.pdf grafiken/samplingvoronoi.pdf grafiken/skelet.pdf grafiken/graphenabstandsfunktion-quadratisch.pdf grafiken/beachline.eps grafiken/isleftof.eps grafiken/ballbstrich.pdf grafiken/thales-einfach.eps grafiken/dg-split.eps grafiken/cocones-uebersicht.eps grafiken/symbolischedarstellung.eps grafiken/leerepowerzelle.pdf grafiken/delaunay-triangulierung.eps grafiken/thales.pdf grafiken/D1-3.eps grafiken/thales-nichtmpenthalten.pdf grafiken/graphenabstandsfunktion-normal.eps grafiken/power-bisektor.eps grafiken/flip.pdf grafiken/delaunay3d-2.eps grafiken/delaunay3d.eps grafiken/beachline.pdf grafiken/thales-einfach.pdf grafiken/isleftof.pdf grafiken/crustlemma2.eps grafiken/dg-split.pdf grafiken/cocones-uebersicht.pdf grafiken/symbolischedarstellung.pdf grafiken/smallangle.eps grafiken/delaunay-triangulierung.pdf grafiken/orthogonaletangenten.eps grafiken/D1-3.pdf grafiken/gewichteterpunktalsball.eps grafiken/kaskadierenderflip.eps grafiken/graphenabstandsfunktion-normal.pdf grafiken/voronoi.eps grafiken/power-bisektor.pdf grafiken/kurveundbaelle.eps grafiken/delaunay3d-2.pdf grafiken/delaunay3d.pdf grafiken/sigmaundbaelle.eps grafiken/graphenabstandsfunktion-power.eps grafiken/crustlemma2.pdf 
 %  rubber soll nach Änderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
 % rubber: index.tool      xindy
