Einigen Abbildungen eine Unterschrift gegeben und damit nag-Warnungen beseitigt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2959 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -773,12 +773,13 @@ Die Linie zwischen Formel Nummer neun und zehn repräsentiert die bereits erwäh
     12  &       $A^n n^b$       \\
     13  &       $B^n$           
 \end{tabular}
+\caption{Cook'sche Linie}
 \end{table}
 
-Des Weiteren gilt die folgende Regel:
-
-$(f_1(n)+ \dots +f_m(n)) \in \OO (\max\{f_1(n),\dotsc,f_m(n)\})$, mengentheoretisch ausgedrückt gilt also: $\OO(f_1(n)) \cup \dots
-\cup \OO(f_m(n)) = \OO (\max\{f_1(n),\dotsc,f_m(n)\})$
+Des Weiteren gilt die folgende Regel: $(f_1(n)+ \dots +f_m(n)) \in \OO
+(\max\{f_1(n),\dotsc,f_m(n)\})$, mengentheoretisch ausgedrückt gilt
+also: $\OO(f_1(n)) \cup \dots \cup \OO(f_m(n)) = \OO
+(\max\{f_1(n),\dotsc,f_m(n)\})$
 
 
 \chapter{Jetzt geht's los}
@@ -2932,7 +2933,7 @@ eingefügt.
 \caption{Funktionsweise der Rotation}
 \end{figure}
 Die letzte Rotation sollte zur übung selbst nachvollzogen werden. Der fertige Baum als Ergebnis dieser letzten Roation steht im Anhang
-auf Seite \pageref{rsrotation}.
+auf Seite \pageref{sec:rsrotation}.
 
 \begin{Algorithmus}[H]
 \addcontentsline{alg}{Algorithmus}{\textsc{RS-Insert\textnormal{(T, z)}}}
@@ -3261,13 +3262,15 @@ Es gilt:\\
 \end{beweis}
 
 \section{Stapel}
-Stapel haben eine so große Bedeutung in der Informatik, daß sich auch im Deutschen das englische "`Stack"' eingebürgert hat.
+Stapel haben eine so große Bedeutung in der Informatik, daß sich auch
+im Deutschen das englische Wort "`Stack"' eingebürgert hat.
 In vielen Algorithmen ist eine Menge zu verwalten, für die sich die einfache Struktur eines Stapels anbietet.
 Manche Caches arbeiten nach dem LIFO-Prinzip (Last In First Out), dazu reicht ein simpler Stapel, in den die zu verwaltenden Elemente
 der Reihe nach hereingegeben werden und ein Zeiger auf das zuletzt hereingegebene Element gesetzt wird.
 
 \begin{figure}[H]
   \centering\input{031203a.latex}
+  \caption{Schematische Darstellung eines Stapels}
   \label{031203a}
 \end{figure}
 
@@ -3341,6 +3344,7 @@ also nicht auf und müssen nicht behandelt werden)
 
 \begin{figure}[H]
   \centering\input{031203b.latex}
+  \caption{TODO: Unterschrift für die Grafik}
   \label{031203b}
 \end{figure}
 
@@ -4806,11 +4810,12 @@ n T(n) & = & (n+1)+ 2 \sum_{k=1}^nT(k-1)\\
 \end{gather*}
 
 \section{Fertiger RS-Baum nach Rotation}
-\label{rsrotation}
+\label{sec:rsrotation}
+
 \begin{figure}[H]
 \centering
 \input{261103e.latex}
-
+\caption{RS-Baum nach Rotation}
 \end{figure}
 
 \section{Der Drehsinn} \label{drehsinn}
