TODO: Beweis-Umgebungen näher an Sätze verschieben
git-svn-id: https://svn.lug-jena.de/uni-skripte@2963 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -18,6 +18,8 @@
 %%       - Algorithmen mit algorithm2e setzen
 %%       - Pakete epic, ecltree durch TikZ eliminieren
 %%       - autoref beibringen, Algorithmus 3.2.1 zu schreiben
+%%       - Beweise sind manchmal "verstreut", besser direkt zur
+%%       jeweiligen Behauptung anfügen
 
 \RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
