Übervolle hbox entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2964 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -329,8 +329,9 @@ Dazu bedient man sich einer Gleitgeraden, die von links nach rechts
 Position prüft. Dieses Verfahren heißt \textsc{Plane-Sweep-Algorithmus},
 eine detaillierte Beschreibung findet sich in \autoref{planesweep}.
 
-Würde der Strahl stetig über die Segmente streichen, gäbe es
-überabzählbar viele Prüfpunkte und das Verfahren wäre nicht maschinell
+Würde der Strahl stetig über die Segmente streichen, wäre die Zahl der
+Prüfpunkte 
+überabzählbar  und das Verfahren wäre nicht maschinell
 durchführbar. Daher ist es auch hier wie überall sonst in der
 elektronischen Datenverarbeitung notwendig, mit diskreten Werten zu
 arbeiten.
@@ -400,7 +401,6 @@ für das Sortieren (siehe unten $\OO$"=Notation). Da es sich um einen \textbf{ou
 Algorithmus handelt, belaufen sich seine Gesamtkosten auf
 $\OO(n\log(n)+k)$, was meist deutlich besser ist als proportionales Verhalten
 zu $n^2$.
-
 Dieses Verfahren erweist sich jedoch mit Hilfe von Arrays als nicht
 realisierbar, ein guter Algorithmus nützt folglich nichts ohne eine
 geeignete Datenstruktur.
