rubber soll auch skript.alg wegräumen
git-svn-id: https://svn.lug-jena.de/uni-skripte@2965 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -1,6 +1,6 @@
 % Einige zusätzliche Informationen für rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
-% rubber: clean $base.thm
+% rubber: clean $base.thm skript.alg
 %  rubber soll nach Änderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
 % rubber: index.tool      xindy
