Insert (H,x) mit algorithm2e
git-svn-id: https://svn.lug-jena.de/uni-skripte@2973 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -3908,6 +3908,21 @@ verfolgt, Operationen so spät wie möglich auszuführen. Bei \textsc{Union} wir
 \end{lstlisting}
 \end{Algorithmus}
 %skript-check an
+\begin{algorithm}
+\Begin{
+  $degree[x]\coloneqq0$\;
+ $p[x]\coloneqq$ Nil\;
+ Sohn$[x]\coloneqq$ Nil\;
+ $links[x]\coloneqq x$\;
+ $rechts[x]\coloneqq x$\;
+ $mark[x]\coloneqq false$ \tcp{Bis hier neue Wurzelliste nur aus $x$}
+ Verknüpfe mit Wurzelliste $H$\;
+\If{$\min[H]=$ Nil ODER $key[x]<key[\min[H]]$}
+{$min[H]\coloneqq x$}
+   $n[H]\coloneqq n[H]+1$
+}
+  \caption{Insert$(H,x)$}
+\end{algorithm}
 
 \subsection{Anwendung der Potentialmethode}
 Jetzt wird die vorher erläuterte Potentialmethode benutzt, um die Kosten zu bestimmen, dabei ist
