\texorpdfstring für Überschriften mit Mathe
git-svn-id: https://svn.lug-jena.de/uni-skripte@2981 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana2/skript.tex
+++ b/carl-ana2/skript.tex
@@ -839,8 +839,8 @@ Für $f$ gilt:
 \end{enumerate}
 \end{beispiel}
 
-\section{Differentiation von $\R^n$-$\R^m$-Funktionen}
-\subsection{Partielle Ableitung von $\R^n$-$\R$-Funktionen}
+\section{Differentiation von \texorpdfstring{$\R^n$-$\R^m$}{Rn-Rm}-Funktionen}
+\subsection{Partielle Ableitung von \texorpdfstring{$\R^n$-$\R^m$}{Rn-Rm}-Funktionen}
 \begin{definition}
   Sei $D\subset \R^n$ offen und $f\colon D\rightarrow \R$ eine reelle Funktion.
   Existiert in $x=(x_1,\dots,x_n)\in\R^n\in D$ die Richtungsableitung
@@ -886,7 +886,7 @@ Für $f$ gilt:
 Aber $f$ ist in $(0,0)$ nicht differenzierbar!
 \end{beispiel}
 
-\subsection{Darstellung der Ableitung von $\R^n$-$\R^m$-Funktionen}
+\subsection{Darstellung der Ableitung von \texorpdfstring{$\R^n$-$\R^m$}{Rn-Rm}-Funktionen}
 \begin{theorem}
   \label{satz:AblMatrix}
   Sei $D\subset\R$ offen und $f\colon D\rightarrow\R^m,f=\begin{pmatrix}
@@ -2511,7 +2511,8 @@ von $y'=f(x,y)$.
 
 Die allgemeine Lösung kann oft durch Parameter beschrieben werden.
 
-\section{Reduktion von Differentialgleichungssystemen höherer Ordnung auf Differentialgleichungssysteme 1.\,Ordnung}
+\section{Reduktion von Differentialgleichungssystemen höherer Ordnung
+  auf Differentialgleichungssysteme 1. Ordnung}
 \begin{definition}
   $G\subset\R\times\R^n\times\dots\times\R^n, f\colon G\rightarrow\R^n$ stetig\\
   Dann heißt
@@ -2629,7 +2630,7 @@ Gesucht ist die allgemeine Lösung von $y'=ay+1$.
 \end{enumerate}  
 \end{beispiel}
 
-\subsection{Beispiele für Differentialgleichungen, die auf $y'=f(x)g(y)$
+\subsection{Beispiele für Differentialgleichungen, die auf \texorpdfstring{$y'=f(x)g(y)$}{y'=f(x)g(y)}
 zurückgeführt werden können}
 \begin{enumerate}[(a)]
   \item Die inhomogene DGL $y'=f(\frac{y}{x})$\\
@@ -3577,7 +3578,7 @@ sind linear unabhängig. Aber $\varphi_1(1)=\varphi_2(1)=\begin{pmatrix}
 \end{enumerate}  
 \end{remark}
 
-\subsection{Die inhomogene Differentialgleichung $y'=A(x)y+b(x)$}
+\subsection{Die inhomogene Differentialgleichung \texorpdfstring{$y'=A(x)y+b(x)$}{y'=A(x)y+b(x)}}
 \begin{theorem}
   Sei $I\subset\R$ ein offenes Intervall und $A\colon I\rightarrow\MM_n(\K),
   b\colon I\rightarrow\K^n$ stetig. Dann gilt für $\psi_0\in\LL_{inh}\colon \LL_{inh}
@@ -3692,7 +3693,7 @@ Allgemeine Lösung des inhomogenen DGL:
 In Komponenten: $y_1=y_1(x)=c_1+\frac{c_2}{2}x^{-\frac{1}{2}}+x-1$ und
 $y_2=y_2(x)=c_1x+c_2x^{\frac{1}{2}}+x^2-x$
 
-\section{Lineare Differentialgleichungen $n$-ter Ordnung}
+\section{Lineare Differentialgleichungen n-ter Ordnung}
 \subsection{Lösungstheorie}
 Übertragung der Resultate über lineare DGL 1.~Ordnung auf lineare
 DGL $n$-ter Ordnung. Sei $I\subset\R$ ein Intervall, $a_k, f\in\CC(I,\K)$
