Hinweis auf Paket esdiff
Ich habe in der Vorlage einen Hinweis auf das Paket esdiff
aufgenommen. Standardmäßig ist es auskommentiert. Aus meiner Sicht ist
das für das Setzen von (partiellen) Ableitungen recht nützlich. Denn
zum einen erspart es für \partial den Tippaufwand und zum anderen wird
automatisch das d in df/dx korrekt in Roman gesetzt. Für Ableitungen
schreibt man \diff{f}{x} und für partielle Ableitungen \diffp{f}{x} um
das gewünschte Ergebnis zu erhalten.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2985 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vorlage/skript.ltx
+++ b/vorlage/skript.ltx
@@ -69,6 +69,10 @@
 \usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
+% \usepackage[text]{esdiff} % Zum Setzen von (partiellen) Ableitungen
+                            % (df/dx). Das d wird korrekt in roman
+                            % gesetzt. Verwendung: \diff{f}{x} oder
+                            % \diffp{f}{x} für partielle Ableitungen
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
