--- a/kuelshammer-algebra2/skript.ltx
+++ b/kuelshammer-algebra2/skript.ltx
@@ -24,17 +24,14 @@
 
 \usepackage{ifthen}
 \usepackage{index}
-% \usepackage[final]{graphicx}  % Für Grafiken
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
 \usepackage[utf8]{inputenc}
 \usepackage{babel}
-% \usepackage{nicefrac}
-% \usepackage{tabularx}
+\usepackage{nicefrac}
 
 \usepackage{lmodern}		% Latin Modern
-% \usepackage{type1ec}           % cm-super
 \usepackage[T1]{fontenc}        % T1-Schriften notwendig für PDFs
 \usepackage{textcomp}           % wird benötigt, damit der \textbullet
                                 % für itemize in lmodern gefunden wird.
@@ -60,8 +57,6 @@
                          % dafür muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
-% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
-                         % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
 \usepackage{ellipsis}    % Korrektur für \dots
 \usepackage{fixltx2e}
 \usepackage[final,babel]{microtype} % Verbesserung der Typographie
@@ -148,18 +143,7 @@
 \newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
-
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
-% sondern \Leftrightarrow.
-\newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
-\newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
+%\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
 
 % Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
@@ -178,15 +162,6 @@
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
 
-% Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
-% nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
-% description mit normaler Schrift
-\newenvironment*{mdescription}%
-                {\renewcommand*{\descriptionlabel}[1]%
- 			       {\hspace\labelsep\normalfont ##1}%
-		 \begin{description}}%
-		{\end{description}}
-
 \makeindex
 
 \SVN $LastChangedRevision$
@@ -194,9 +169,9 @@
 
 \begin{document}
 
-\title{Name der Vorlesung}
-\author{Name des Dozenten}
-\date{Semester: SS 200X, WS 200X/0Y}
+\title{Algebra~2}
+\author{Prof.\,Dr.\,Burkhard Külshammer}
+\date{Semester: SS 2010}
 \maketitle
 
 \clearpage
@@ -235,7 +210,7 @@
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
   haben, vielmals danken:
   \begin{itemize}
-   \item \href{mailto:email}{Person \nolinkurl{<email>}} (Jahr)
+   \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel \nolinkurl{<jens@kubieziel.de>}} (2010)
   \end{itemize}
 }
 
@@ -257,103 +232,16 @@
 % \theoremlisttype{all}
 \listtheorems{defini,festl}
 
-\chapter{Erstes Kapitel}
-\section{Erster Abschnitt}
-
-\begin{satz}[Toller Satz]\label{satz:1}
-  Dies ist ein ganz toller und wichtiger Satz mit einer ganz einfachen
-  Formel
-  \begin{gather*}
-    a\cdot0=0
-  \end{gather*}
-
-  \begin{proof}
-    Daher müssen wir ihn auch beweisen:
-    \begin{align*}
-      a\cdot 0 &= a\cdot(1-1)\\
-      &= a-a&\text{durch ausmultiplizieren}\\
-      &= 0&\text{n.\,Definition d.\,Inversen d.\,Addition}
-    \end{align*}
-  \end{proof}
-\end{satz}
-
-Die Umgebung \texttt{proof} sollte immer innerhalb der Umgebung stehen, zu der
-der Beweis gehört. Das hat den Vorteil, dass man Umgebungen ohne Beweis z.\,B.
-mit $\scriptstyle\Box$ enden lassen kann, wärend Umgebungen mit Beweisen
-mit $\scriptstyle\blacksquare$ enden. Dadurch kann man im laufenden Text
-auch das Ende von Sätzen, Bemerkungen und dergleichen erkennen, was sonst
-schwer ist, da die gleiche Schrift sowohl innerhalb als auch außerhalb
-verwendet wird.
-% Man beachte die speziellen Anweisungen bei der theorem-Definition in der
-% Präampel
-
-\begin{bemerk}
-  Der ganz tolle und wichtige \autoref{satz:1} ist gar nicht so toll und
-  wichtig ist er schon gar nicht.
-\end{bemerk}
-
-\begin{bemerk}[Wichtiger Hinweis]
-  Aber merke: Keine \texttt{equation}-Umgebung mehr verwenden.
-  % \todo am Besten immer in eine eigene Zeile schreiben, so kann man diese
-  % Löschen und der Commit berührt nicht den Text, sofern dies nicht
-  % erforderlich ist.
-  \todo{Dokument darauf prüfen}
-  Stattdessen lieber \texttt{gather}. Siehe \url{news:d9bfko$fdp$1@news.BelWue.DE}
-  \href{ftp://cam.ctan.org/tex-archive/macros/latex/contrib/onlyamsmath/onlyamsmath.dvi}
-  {Dokumentation von onlyamsmath}
-  und einfach mal "`\texttt{texdoc amsldoc}"' aufrufen.
-
-  Auf \url{http://www.dante.de/CTAN/info/german/l2tabu/l2tabu.pdf} sind
-  weitere nützliche Hinweise zu finden.
-\end{bemerk}
-
-\begin{satz}[Verwendung von Grafiken]
-  Grafiken sollten prinzipell in einem Vektorformat erstellt werden. Dazu
-  eignet sich \texttt{xfig} sehr gut. Wird das Bild mit
-  \texttt{\textbackslash{}includegraphics\{bild\}} eingebunden, erstellt
-  \texttt{rubber} automatisch daraus die benötigte Datei
-  -- \texttt{bild.pdf} oder \texttt{bild.eps} -- für \LaTeX{}.
-
-  Für besondere Schriften (z.\,B. mathmatische Zeichen oder
-  Hoch-/Tiefstellen) kann man in \texttt{xfig} das "`Special Flag"' für
-  Text setzen und das Bild mit
-  \texttt{\textbackslash{}input\{bild.pdf\_t\}} einbinden. Damit wird die
-  Schrift direkt von \LaTeX{} erzeugt und man hat (fast) alle
-  Möglichkeiten, die \LaTeX{} bietet. \texttt{rubber} erkennt
-  selbstständig, welches Grafikformat benötigt wird und erzeugt
-  unabhängig vom Namen das Bild als PDF oder PS.
-\end{satz}
-
-\begin{festl}
-  Im Mathematikmodus drückt man mit einem Doppelpunkt \texttt{:} nicht
-  unbedingt das aus, was man will. Der Doppelpunk ist der
-  Divisionsoperator, wie er z.\,B. in "`$1:2 = 0,5$"'%
-  \footnote{Da im Englischen das Komma der Trenner für die
-    Tausenderstelle ist, muss man das Paket \textsf{isonums} verwenden,
-    sonst stimmt der Abstand nicht: $\ZifferAus 0,5\ZifferAn$ (ohne) statt
-    $0,5$ (mit). Siehe auch
-    \href{http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf}
-    {Mathmode von Herbert Voss}\cite{mathmode} Abschnitt
-    "`11.4 Dot versus comma"'}
-  verwendet wird. Wenn man jedoch $f\colon \R\rightarrow\R$ oder
-  $\{a\colon a\in\N\cap\Q\}$ ausdrücken will, muss man \verb+\colon+
-  verwenden.
-
-  Der Unterschied zeigt sich u.\,a. im linken und rechten Abstand
-  $g:A\rightarrow B$ mit Doppelpunkt im Vergleich zu $g\colon
-  A\rightarrow B$ mit \verb+\colon+. Siehe
-  \href{ftp://ftp.ams.org/pub/tex/doc/amsmath/short-math-guide.pdf}
-  {Short Math Guide for \LaTeX{}}\cite{shmathguide}
-\end{festl}
+\chapter{Start}
 
 \clearpage
 \appendix
 \begin{thebibliography}{99}
- \bibitem{mathmode} Math mode von Herbert Voss,\\
-  \url{http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf}
+ % \bibitem{mathmode} Math mode von Herbert Voss,\\
+ %  \url{http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf}
 
- \bibitem{shmathguide} Short Math Guide for \LaTeX{},\\
-  \url{ftp://ftp.ams.org/pub/tex/doc/amsmath/short-math-guide.pdf}
+ % \bibitem{shmathguide} Short Math Guide for \LaTeX{},\\
+ %  \url{ftp://ftp.ams.org/pub/tex/doc/amsmath/short-math-guide.pdf}
 \end{thebibliography}
 
 \clearpage
