Lösung von Aufgabe 66
git-svn-id: https://svn.lug-jena.de/uni-skripte@3013 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -8045,10 +8045,87 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
   Körperautomorphismen von $\F_{p^{n}}$ betrachten.
 \end{exerc}
 
+% Aufgabe 30
+\begin{exerc}\label{exer:30}
+  noch einbauen
+\end{exerc}
+
+% Aufgabe 32
+\begin{exerc}\label{exe:32}
+  noch einbauen
+\end{exerc}
+
+\section{Übungsblatt 15}
+
+% Aufgabe 66
+\begin{exerc}
+  Seien $p\in\PZ, G\coloneqq\Sym(p)$ und $P\in\Syl_{p}(G)$.
+  \begin{enumerate}
+   \item Berechnen Sie $N_{G}(P)$.\\
+    Nach dem unten stehenden Punkt ist $\abs{N_{G}(P)}=p(p-1)$. Sei \OE{} $P=
+    \langle(1\,2\,\dotsc\,p)\rangle$. (Wegen $gN_{G}(P)g^{-1}=
+    N_{G}(gPg^{-1})$ hängt der Isomorphietyp von $N_{G}(P)$ nicht von der Wahl
+    der $p$"~Sylowgruppe $P$ ab.) Die Operation von $N_{G}(P)$ auf $P$ liefert
+    einen Homomorphismus
+    \begin{gather*}
+      \phi\colon N_{G}(P)\rightarrow\Aut(P)\cong\Aut(\Z/p\Z)\cong(\Z/p\Z)^{*}
+	 \cong C_{p-1}
+    \end{gather*}
+    mit $\ker\phi=C_{G}(P)$ (vergleiche \autoref{exer:30} Teil~(iv)). Wir
+    zeigen, dass $\phi$ surjektiv ist. Sei dazu $k+p\Z\in(\Z/p\Z)^{*}$ ein
+    Element der Ordnung $p-1$. Dann ist die Abbildung $P\rightarrow P$ mt
+    $(1\,2\,\dotsc\,p)\mapsto(1\,2\,\dotsc\,p)^{k}$ ein Automorphismus der
+    Ordnung $p-1$ (siehe Beweis von \autoref{exe:32}). Da  auch
+    $(1\,2\,\dotsc\,p)^{k}$ die Ordnung $p$ hat, existieren paarweise
+    verschiedene $a_{1},\dotsc, a_{p}\in\{1,\dotsc,p\}$ mit
+    $(1\,2\,\dotsc\,p)^{k}= (a_{1},\dotsc, a_{p})$. Wir definieren nun
+    \begin{gather*}
+      \sigma\coloneqq
+	 \begin{pmatrix}
+	   1 & 2 & \dotso & p\\
+	   a_{1} & a_{2} & \dotso & a_{p}
+	 \end{pmatrix}\in G
+    \end{gather*}
+    (Dies ist eine der wenigen Stellen, wo Zyklenschreibweise ungeeignet ist.)
+    Dann ist
+    \begin{gather*}
+      \sigma(1\,2\,\dotsc\,p)= (\sigma(1),\dotsc,\sigma(p))= (a_{1},\dotsc,
+	 a_{p})= (1\,2\,\dotsc\,p)^{k}
+    \end{gather*}
+    Also ist $\sigma\in N_{G}(P)$. Wegen $\langle\phi(\phi)\rangle=\Aut(P)$
+    ist $\phi$ surjektiv und $\sigma$ hat mindestens die Ordnung $p-1$. Im
+    Fall $P\cap\langle\sigma\rangle\neq1$ wäre
+    $P=P\cap\langle\sigma\rangle\subseteq\langle\sigma\rangle$. Dann würde
+    aber $\sigma$ trivial auf $P$ operieren. Dies zeigt
+    $P\cap\langle\sigma\rangle=1$. Damit ist
+    \begin{gather*}
+      p(p-1)\leq\abs{P}\cdot\abs{\langle\sigma\rangle}=
+	 \abs{P\langle\sigma\rangle} \leq\abs{N_{G}(P)}= p(p-1)
+    \end{gather*}
+    und $N_{G}(P)= P\langle\sigma\rangle$. Damit ist $N_{G}(P)$ ein so
+    genanntest \highl[Produkt!semidirektes]{semidirektes Produkt} und man
+    schreibt $N_{G}(P)= P\rtimes\langle\sigma\rangle$.
+   \item Zeigen Sie: $\abs{G\colon N_{G}(P)}= (p-2)!$.\\
+    Offenbar ist $\abs{P}=p$ und jede $p$"~Sylowgruppe von $G$ wird durch
+    einen $p$"~Zyklus erzeugt. Jeden $p$"~Zyklus kann man eindeutig in der
+    Form $(1,a_{2},\dotsc, a_{p})$ mit $\{a_{2},\dotsc,
+    a_{p}\}=\{2,\dotsc,p\}$ schreiben. Also gibt es $(p-1)!$ viele $p$"~Zyklen
+    in $G$. Jede $p$"~Sylowgruppe von $G$ enthält genau $p-1$ solche
+    $p$-Zyklen und jeder $p$"~Zyklus liegt in genau einer $p$"~Sylowgruppe.
+    Also ist: $\abs{G\colon N_{G(P)}}= \frac{(p-1)!}{p-1}=(p-2)!$ die Anzahl
+    der $p$"~Sylowgruppen.
+   \item Folgern Sie: $(p-1)!\equiv-1\pmod{p}$ (Satz von \textsc{Wilson}).\\
+    Aus dem obigen Punkt und dem Satz von \textsc{Sylow} folgt $(p-2)!\equiv1
+    \pmod{p}$. Also ist
+    \begin{gather*}
+      (p-1)!=(p-2)!(p-1)\equiv p-1\equiv-1\pmod{p}
+    \end{gather*}
+  \end{enumerate}
+\end{exerc}
 \section{Übungsblatt 16}
 
 % Aufgabe 67
-\begin{exerc}\label{exe:67}
+\begin{exerc}\label{exer:67}
   Eine geordnete Menge $(P,\leq)$ heißt \highl{lokal
   endlich}\index{Menge!lokal endliche}, falls für alle $x,y\in P$ das Intervall
   \begin{gather*}
@@ -8161,7 +8238,7 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
     \end{align*}
     Nun zur eigentlichen Aufgabe. Wir argumentieren durch Induktion nach $k=
     \dim Y/X$. Im Fall $X=Y$, also $k=0$, gilt $\mu_{P}(X,Y)= 1$ in
-    Übereinstimmung mit \autoref{exe:67} Teil~(iii). Für $k\geq1$ ist nach
+    Übereinstimmung mit \autoref{exer:67} Teil~(iii). Für $k\geq1$ ist nach
     Definition:
     \begin{align*}
       \mu_{P}(X,Y) &= -\sum_{\substack{Z \text{ UVR von } V\\ X\subseteq
