--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -8105,15 +8105,15 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
     und $N_{G}(P)= P\langle\sigma\rangle$. Damit ist $N_{G}(P)$ ein so
     genanntest \highl[Produkt!semidirektes]{semidirektes Produkt} und man
     schreibt $N_{G}(P)= P\rtimes\langle\sigma\rangle$.
-   \item Zeigen Sie: $\abs{G\colon N_{G}(P)}= (p-2)!$.\\
-    Offenbar ist $\abs{P}=p$ und jede $p$"~Sylowgruppe von $G$ wird durch
-    einen $p$"~Zyklus erzeugt. Jeden $p$"~Zyklus kann man eindeutig in der
-    Form $(1,a_{2},\dotsc, a_{p})$ mit $\{a_{2},\dotsc,
-    a_{p}\}=\{2,\dotsc,p\}$ schreiben. Also gibt es $(p-1)!$ viele $p$"~Zyklen
-    in $G$. Jede $p$"~Sylowgruppe von $G$ enthält genau $p-1$ solche
-    $p$-Zyklen und jeder $p$"~Zyklus liegt in genau einer $p$"~Sylowgruppe.
-    Also ist: $\abs{G\colon N_{G(P)}}= \frac{(p-1)!}{p-1}=(p-2)!$ die Anzahl
-    der $p$"~Sylowgruppen.
+  \item Zeigen Sie: $\abs{G\colon N_{G}(P)}= (p-2)!$.\\
+    Offenbar ist $\abs{P}=p$ und jede $p$"~Sylowgruppe von $G$ wird
+    durch einen $p$"~Zyklus erzeugt. Jeder $p$"~Zyklus lässt sich in
+    der Form $(1,a_{2},\dotsc, a_{p})$ mit $\{a_{2},\dotsc,
+    a_{p}\}=\{2,\dotsc,p\}$ eindeutig schreiben. Also gibt es $(p-1)!$
+    viele $p$"~Zyklen in $G$. Jede $p$"~Sylowgruppe von $G$ enthält
+    genau $p-1$ solche $p$-Zyklen und jeder $p$"~Zyklus liegt in genau
+    einer $p$"~Sylowgruppe.  Also ist: $\abs{G\colon N_{G(P)}}=
+    \frac{(p-1)!}{p-1}=(p-2)!$ die Anzahl der $p$"~Sylowgruppen.
    \item Folgern Sie: $(p-1)!\equiv-1\pmod{p}$ (Satz von \textsc{Wilson}).\\
     Aus dem obigen Punkt und dem Satz von \textsc{Sylow} folgt $(p-2)!\equiv1
     \pmod{p}$. Also ist
@@ -8213,8 +8213,10 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
     \begin{align*}
       q^{n-k}\binom{n-1}{k-1}+\binom{n-1}{k} &= q^{n-k} \prod_{i=1}^{k-1}
 	 \frac{q^{n-k+i}-1}{q^{i}-1}+ \prod_{i=1}^{k} \frac{q^{n-1-k+i}-1}{q^{i}-1}\\
-      &= \frac{q^{n-k}(q^{k}-1) \left(\prod_{i=1}^{k-1} q^{n-k+i}-1\right) +
-	 (q^{n-k}-1)\left(\prod_{i=1}^{k} q^{n-k+i}-1\right)}{\prod_{i=1}^{k} q^{i}-1}\\
+      &= \frac{q^{n-k}(q^{k}-1) \left(\prod_{i=1}^{k-1}
+          q^{n-k+i}-1\right)}{\prod_{i=1}^{k} q^{i}-1}\\
+      &\hspace{15mm}+
+	 \frac{(q^{n-k}-1)\left(\prod_{i=1}^{k} q^{n-k+i}-1\right)}{\prod_{i=1}^{k} q^{i}-1}\\
       &= \frac{(q^{n}-1)\left(\prod_{i=1}^{k-1}
 	 q^{n-k+i}-1\right)}{\prod_{i=1}^{k} q^{i}-1}= \binom{n}{k}
     \end{align*}
@@ -8232,8 +8234,9 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
       &= \sum_{k=0}^{n-1} \binom{n-1}{k} (-1)^{k} q^{\frac{k(k-1)}{2}} +
 	 \sum_{k=0}^{n-1} q^{n-k-1} \binom{n-1}{k} (-1)^{k+1} q^{k+\frac{k(k-1)}{2}}\\
       &= 1+ \sum_{k=1}^{n-1}\binom{n-1}{k} (-1)^{k} q^{\frac{k(k-1)}{2}} +
-	 \sum_{k=1}^{n-1} q^{n-k} \binom{n-1}{k-1}(-1)^{k}q^{\frac{k(k-1)}{2}}
-	 +(-1)^{n} q^{\frac{n(n-1)}{2}}\\
+	 \sum_{k=1}^{n-1} q^{n-k}
+         \binom{n-1}{k-1}(-1)^{k}q^{\frac{k(k-1)}{2}}\\
+      &\hspace{25mm}+(-1)^{n} q^{\frac{n(n-1)}{2}}\\
       &= \sum_{k=0}^{n} \binom{n}{k} (-1)^{k} q^{\frac{k(k-1)}{2}}
     \end{align*}
     Nun zur eigentlichen Aufgabe. Wir argumentieren durch Induktion nach $k=
