Meckereien von skript-check beseitigt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3021 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -2402,7 +2402,7 @@ WHERE a.AngNr = m.AngNr
 Nun wollen  die obige Ausgabe für Mitarbeiter aus Erfurt und für
 Projekte, deren Beschreibung nicht "`Wartburg"' enthält
 \begin{lstlisting}
-SELECT ... FROM ...
+SELECT .. FROM ..
 WHERE a.Wohnort = 'Erfurt' AND p.Beschr NOT LIKE '%Wartburg'
 \end{lstlisting}
 
@@ -2509,7 +2509,7 @@ Basisrelationen oder aus bereits erzeugten Sichten hervor. Dabei ist
 eine Basisrelation eine solche, die mittels \lstinline{CREATE TABLE}
 erzeugt werden kann. Dieses Sprachmittel wurd geschaffen, um die
 externe Ebene gemäß der ANSI/SPARC"=Architektur (siehe
-\ref{sec:ansi-sparc-arch}) nachzukommen. Der Benutzer der Datenbank
+\autoref{sec:ansi-sparc-arch}) nachzukommen. Der Benutzer der Datenbank
 ist somit entkoppelt von den tiefer liegenden Ebenen. Mit Sichten
 lassen sich für verschiedene Nutzergruppen zugeschnittene Ergebnisse
 produzieren. In \autoref{fig:syntax-sicht} ist das Syntaxdiagramm dargestellt.
