Tupelvariable in Index aufgenommen

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1936,7 +1936,7 @@ betrachtet werden. Grundsätzlich wird dabei beschrieben, welche
 Bedingungen (Prädikate) die Tupel der Ergebnisrelation erfüllen
 müssen.
 
-\begin{defini}
+\begin{defini}[Tupelvariable]
   Eine \highl{Tupelvariable} ist ein Tupel einer Relation. Sei die
   Tupelvariable $U$ der Relation $R$ zugeordnet und $A$ ein Attribut
   von $R$. Dann bezeichnet $U.A$ den Attributwert von $A$ in
