--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -8057,6 +8057,36 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
 
 \section{Übungsblatt 15}
 
+% Aufgabe 61
+\begin{exerc}
+  Zeigen Sie, dass eine Gruppe genau dann endlich ist, wenn sie nur endlich
+  viele Untergruppen enthält.
+\end{exerc}
+
+% Aufgabe 62
+\begin{exerc}
+  Wie viele Elemente der Ordnung $2$ enthält $\SL(2,\F_{5})$?
+\end{exerc}
+
+% Aufgabe 63
+\begin{exerc}
+  Sei $G$ eine endliche Gruppe mit $k$~Konjugationsklassen. Zeigen Sie: Die
+  Wahrscheinlichkeit, dass zwei zufällig (mit "`Zurücklegen"') ausgewählte
+  Elemente in $G$ miteinander vertauschbar sind, ist $\nicefrac{k}{\abs{G}}$.
+\end{exerc}
+
+% Aufgabe 64
+\begin{exerc}
+  Sei $G$ eine Gruppe mit Normalteilern $M$ und $N$. Zeigen Sie: Sind $G/M$
+  und $G/N$ auflösbar, so ist auch $G/M\cap N$ auflösbar.
+\end{exerc}
+
+% Aufgabe 65
+\begin{exerc}
+  Es seien $G$ eine endliche Gruppe, $p\in\PZ, P\in\Syl_{p}(G)$ und
+  $N_{G}(P)\leq H\leq G$. Zeigen Sie: $N_{G}(H)=H$.
+\end{exerc}
+
 % Aufgabe 66
 \begin{exerc}
   Seien $p\in\PZ, G\coloneqq\Sym(p)$ und $P\in\Syl_{p}(G)$.
@@ -8122,6 +8152,7 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
     \end{gather*}
   \end{enumerate}
 \end{exerc}
+
 \section{Übungsblatt 16}
 
 % Aufgabe 67
