--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -8055,6 +8055,71 @@ behandelt. Das Kapitel muss noch ergänzt werden.\todo{Friesgruppen ergänzen}
   noch einbauen
 \end{exerc}
 
+\section{Übungsblatt 14}
+
+% Aufgabe 56
+\begin{exerc}
+  Eine Gruppe der Ordnung $55$ operiere auf einer Menge mit $39$~Elementen.
+  Zeigen Sie, dass es mindestens einen Fixpunkt gibt.
+\end{exerc}
+
+% Aufgabe 57
+\begin{exerc}
+  Zeigen Sie, dass die Gruppe $\SL(2,\R)$ aller reellen $2\times2$"~Matrizen
+  mit Determinante $1$ auf der oberen Halbebene $H\coloneqq\Set{z\in\C |
+  \Im(z)>0}$ durch
+  \begin{gather*}
+    \begin{pmatrix}
+      a & b\\
+      c & d
+    \end{pmatrix}*z\coloneqq\frac{az+b}{cz+d}
+  \end{gather*}
+  operiert.
+\end{exerc}
+
+% Aufgabe 58
+\begin{exerc}
+  Beweisen Sie, dass jede Gruppe der Ordnung $88$ auflösbar ist.
+\end{exerc}
+
+% Aufgabe 59
+\begin{exerc}
+  Gegeben sei eine endliche Gruppe $g$, die genau aus zwei Konjugationsklassen
+  besteht. Zeigen Sie: $\abs{G}=2$.
+\end{exerc}
+
+% Aufgabe 60
+\begin{exerc}
+  Wahrscheinlich kennen Sie das folgende Spiel. Es besteht aus $15$~Quadraten,
+  die mit den Zahlen $1,\dotsc, 15$ beschriftet sind, und einem leeren Quadrat.
+  Diese werden in $4$~Reihen von je $4$~Quadraten angeordnet. Ein erlaubter Zug
+  ist das Verschieben eines beschrifteten Quadrats auf das benachbarte Feld,
+  falls dieses leer ist. Kann man so von
+  \begin{tabular}{|c|c|c|c|}
+    \hline
+    1& 2& 3& 4\\
+        \hline
+    5& 6& 7& 8\\    \hline
+    9& 10& 11& 12\\    \hline
+    13& 15& 14& \\
+    \hline
+  \end{tabular}
+  zu
+    \begin{tabular}{|c|c|c|c|}
+    \hline
+    1& 2& 3& 4\\
+          \hline
+    5& 6& 7& 8\\
+          \hline
+    9& 10& 11& 12\\
+          \hline
+    13& 14& 15& \\
+      
+	     \hline
+  \end{tabular}
+  gelangen?
+\end{exerc}
+
 \section{Übungsblatt 15}
 
 % Aufgabe 61
